Add java.library.path support